--- a/Jkt.web/Areas/Admin/Views/Identity/OperateLogList.cshtml
+++ b/Jkt.web/Areas/Admin/Views/Identity/OperateLogList.cshtml
@@ -81,7 +81,7 @@
             { data: "Id", title: "编号" },
             { data: "FunctionName", title: "功能名称", type: "text", search: true, validation: { required: true } },
             { data: "UserName", title: "操作人", type: "text", search: true },
-            { data: "Email", title: "IP地址", type: "text", search: true },
+           // { data: "Email", title: "IP地址", type: "text", search: true },
             {
                 data: "CreatedTime",
                 title: "创建时间",
