--- a/Jkt.web/Areas/Admin/Views/JcuSystem/JcuSystemList.cshtml
+++ b/Jkt.web/Areas/Admin/Views/JcuSystem/JcuSystemList.cshtml
@@ -12,11 +12,14 @@
     <script type="text/javascript">
         var jcuId = 0;
         columns = [
-        { data: "Id", title: "编号" }, { data: "JcusId", title: "校区Id", type: "hide" }, { data: "SystemInfoId", title: "校区经理用户Id", type: "hide" },
-        { data: "NickName", title: "昵称", type: "text" },
-          { data: "RealName", title: "真实姓名", type: "text" },
+        //{ data: "Id", title: "编号" },
+        { data: "JcusId", title: "校区Id", type: "hide" }, { data: "SystemInfoId", title: "校区经理用户Id", type: "hide" },
+        { data: "Id", title: "用户Id", type: "hide" },
+        { data: "HeadPic", title: "头像", type: "img", editor: {} },
+        { data: "NickName", title: "昵称", type: "text", editor: {} },
+          { data: "RealName", title: "真实姓名", type: "text", editor: {} },
 
-               { data: "PhoneNumber", title: "电话号码", type: "text" },
+               { data: "PhoneNumber", title: "电话号码", type: "text", editor: {} },
         { data: "Name", title: "所属校区", type: "text" }, { data: "Sum", title: "学员数量", type: "text" },
       {
           data: "CreatedTime",
@@ -33,13 +36,7 @@
         startfunction = function () {
             $("#btAdd").unbind();
             $("#btAdd").click(function () {
-                var html = "";
-                $.post("@Url.Action("GetSystemUser")", {}, function (data) {
-                    for (var i = 0; i < data.length; i++) {
-                        html += '<option value="' + data[i].Id + '">' + data[i].NickName + '<option>';
-                    }
-                    $("#Account").html(html);
-                });
+
 
                 //弹出框
                 bootbox.dialog({
@@ -62,6 +59,7 @@
                                     } else {
                                         Notify(data.Content, 'bottom-right', '5000', 'info', 'fa-envelope', true);
                                     }
+                                    dataTable.reload();
                                 });
                             }
                         },
@@ -78,8 +76,10 @@
             tabArea.before($("#tree"));
             $("#tree .widget-body").height(document.body.scrollHeight - 140);
 
+
+
             // UITree.init();
-            var tree = new $.osharp.Treeview("#treeContent", {
+            @* var tree = new $.osharp.Treeview("#treeContent", {
                 ajax: "@Url.Action("GetJcuSystemTree")",
                 itemSelect: function (item) {
                     dataTable.conf.ajax = "@ViewBag.GridDataUrl?jcusId=" + item.value;
@@ -90,7 +90,40 @@
                     }
                     dataTable.reload();
                 }
+            });*@
+            $.post("@Url.Action("GetJcuSystemTree")", {}, function (data) {
+                var html = '';
+                var dataP = data.data;
+                var dataC = data.datas;
+                for (var i = 0; i < dataP.length; i++) {
+                    html += '<div class="tree-folder" style="display: block;"><div data-value="' + dataP[i].text + '" class="tree-folder-header" onclick="parent(this)"><i class="fa blueberry fa-folder-open"></i><div class="tree-folder-name">' + dataP[i].text + '<div class="tree-actions"></div></div></div><div class="tree-folder-content" style="display: block;">';
+                    for (var k = 0; k < dataC.length; k++) {
+                        if (dataC[k].parentId === dataP[i].value) {
+                            html += '<div data-value="' + dataC[k].Id + '" class="tree-item"style="display: block;" onclick="contents(this,' + dataP[i].value + ')" data-text="' + dataC[k].text + '" data-parentId="' + dataP[i].value + '"> <div class="tree-item-name">' + dataC[k].text + '</div><div class="tree-actions"></div></div>';
+                        }
+                    }
+                    html += '</div><div class="tree-loader" style="display: none;"><div class="tree-loading"><i class="fa fa-rotate-right fa-spin blueberry"></i></div> </div> </div>';
+                    $(html).appendTo($('#treeContent'));
+                    html = '';
+                }
             });
+            var htmls = "";
+            $.post("@Url.Action("GetSystemUser")", {}, function (data) {
+                for (var i = 0; i < data.length; i++) {
+                    htmls += '<option value="' + data[i].Id + '">' + data[i].UserName + '<option>';
+                }
+                $("#Account").html(htmls);
+            });
+        }
+        function contents(obj, pId) {
+            $('.bg-palegreen').removeClass('bg-palegreen');
+            $(obj).addClass('bg-palegreen');
+            dataTable.conf.ajax = "@ViewBag.GridDataUrl?jcusId=" + pId;
+            dataTable.beforeEdit = function (index, row) {
+                row.Id = row.SystemInfoId;
+            }
+            dataTable.reload();
+            jcuId = pId;
         }
     </script>
 }
