--- a/Jkt.web/Areas/Admin/Views/Student/StudentList.cshtml
+++ b/Jkt.web/Areas/Admin/Views/Student/StudentList.cshtml
@@ -1,11 +1,8 @@
-﻿
-
-@{
+﻿@{
     ViewBag.Title = "学员列表";
     Layout = "~/Areas/Admin/Views/Shared/_DataGridLayout.cshtml";
-    ViewBag.GridDataUrl = Url.Action("GetJcuSystemData");
-    ViewBag.DeleteUrl = Url.Action("DeleteJcuSystem");
-    //ViewBag.SaveUrl = Url.Action("SaveJcuSystemData");
+    ViewBag.GridDataUrl = Url.Action("GetStudentData");
+    ViewBag.SaveUrl = Url.Action("SaveStudentData");
     ViewBag.ToolbarItem = "edit,cancel";
 }
 @section customScript
@@ -13,98 +10,75 @@
     <script src="~/Content/js/osharp/osharp.treeview.js"></script>
     <script type="text/javascript">
         var jcuId = 0;
+        var orderStates=@Html.Raw(Json.Encode(ViewBag.ScheduleState));
         columns = [
         //{ data: "Id", title: "编号" },
         { data: "UserInfoId", title: "校区Id", type: "hide" },
-        { data: "SystemInfoId", title: "校区经理用户Id", type: "hide" },
-        { data: "Id", title: "用户Id", type: "hide" },
+        { data: "Id", title: "学员编号", type: "number" },
         { data: "HeadPic", title: "头像", type: "img"},
-        { data: "UserName", title: "帐号", type: "text" },
-          { data: "RealName", title: "姓名", type: "text" },
-
-          { data: "NickName", title: "昵称", type: "text" },
-               { data: "PhoneNumber", title: "电话号码", type: "number" },
-                 { data: "Qq", title: "QQ", type: "text" },
-        { data: "Name", title: "所属校区", type: "text" }, { data: "Sum", title: "学员数量", type: "text" },
-      {
-          data: "CreatedTime",
-          title: "上任时间",
-          type: "datepicker",
-          search: true,
-          format: function (d) {
-              return $.osharp.tools.formatDate(d);
-          },
-          isformatval: true
-      }
-        ];
-        //$(function () {
-        //    dataTable.beforeEdit = function (index, row) {
-        //        row.Id = row.SystemInfoId;
-        //    }
-        //})
-        startfunction = function () {
-
-            $("#btAdd").unbind();
-            $("#btAdd").click(function () {
-
-
-                //弹出框
-                bootbox.dialog({
-                    message: $("#goodsInventory").html(),
-                    title: "设置功能",
-                    className: "modal-blue",
-                    buttons: {
-                        success: {
-                            label: "保存",
-                            className: "btn-blue",
-                            callback: function () {
-                                var dtos = [];
-                                dtos.push({
-                                    SystemInfoId: $(".modal-content").find('select').val(),
-                                    JcusId: jcuId
-                                });
-                                $.post("@Url.Action("AddJcuSystem")", { dtos: dtos }, function (data) {
-                                    if (data.Type === "Error") {
-                                        Notify(data.Content, 'bottom-right', '5000', 'danger', 'fa-bolt', true);
-                                    } else {
-                                        Notify(data.Content, 'bottom-right', '5000', 'info', 'fa-envelope', true);
-                                    }
-                                    dataTable.reload();
-                                });
-                            }
-                        },
-                        "取消": {
-                            className: "btn-danger",
-                            callback: function () { }
-                        }
+        { data: "UserRealName", title: "姓名", type: "text", search: true, },
+        { data: "NickName", title: "微信昵称", type: "text" },
+        { data: "PhoneNumber", title: "电话号码", type: "number" },
+        { data: "SysRealName", title: "所属校区经理", type: "text" },
+        {
+            data: "ScheduleState",
+            title: "学车进度",
+            type: "combobox",
+            search: true,
+            eidtor:{},
+            source: { data: orderStates },
+            format: function (v) {
+                for (var i = 0; i < orderStates.length; i++) {
+                    if (orderStates[i]["val"].toString() === v.toString()) {
+                        return orderStates[i]["text"];
                     }
-                });
-            });
+                }
+                return v;
+            }
+        },
+        {
+            data: "ExaminationTime",
+            title: "预约考试时间",
+            type: "datepicker",
+            search: true,
+            format: function (d) {
+                return $.osharp.tools.formatDate(d);
+            },
+            isformatval: true
+        },
+        {
+            data: "CreatedTime",
+            title: "报名时间",
+            type: "datepicker",
+            search: true,
+            format: function (d) {
+                return $.osharp.tools.formatDate(d);
+            },
+            isformatval: true
+        }
+        ];
 
+        startfunction = function () {
+            var uid=0;
+            uid='@ViewBag.UserId';
+            if(Number(uid)===0)
+            {
+                window.location.href='/Admin/Home/Login';
+                return false;
+            }
             var tabArea = $(".page-body>.row>div");
             tabArea.attr("class", "col-xs-8 col-md-9 col-lg-10");
             tabArea.before($("#tree"));
             $("#tree .widget-body").height(document.body.scrollHeight - 140);
-
-
-
-            // UITree.init();
-            @* var tree = new $.osharp.Treeview("#treeContent", {
-                ajax: "@Url.Action("GetJcuSystemTree")",
-                itemSelect: function (item) {
-                    dataTable.conf.ajax = "@ViewBag.GridDataUrl?jcusId=" + item.value;
-
-                    dataTable.beforeEdit = function (index, row) {
-                        row.jcusId = item.value;
-                        jcuId = item.value;
-                    }
-                    dataTable.reload();
-                }
-            });*@
-            $.post("@Url.Action("GetJcuSystemTree")", {}, function (data) {
+            $.post("@Url.Action("GetJcuSystemTree")", {userId: uid}, function (data) {
                 var html = '';
                 var dataP = data.data;
                 var dataC = data.datas;
+                if(dataP.length===0)
+                {
+                    $('#content').html("你还不是校区经理，不能查看，若要继续请联系管理员");
+                    return false;
+                }
                 for (var i = 0; i < dataP.length; i++) {
                     html += '<div class="tree-folder" style="display: block;"><div data-value="' + dataP[i].text + '" class="tree-folder-header" onclick="parent(this)"><i class="fa blueberry fa-folder-open"></i><div class="tree-folder-name">' + dataP[i].text + '<div class="tree-actions"></div></div></div><div class="tree-folder-content" style="display: block;">';
                     for (var k = 0; k < dataC.length; k++) {
@@ -116,13 +90,6 @@
                     $(html).appendTo($('#treeContent'));
                     html = '';
                 }
-            });
-            var htmls = "";
-            $.post("@Url.Action("GetSystemUser")", {}, function (data) {
-                for (var i = 0; i < data.length; i++) {
-                    htmls += '<option value="' + data[i].Id + '">' + data[i].UserName + '<option>';
-                }
-                $("#Account").html(htmls);
             });
         }
         function contents(obj, pId) {
@@ -155,18 +122,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div id="goodsInventory" style="display: none;">
-        <form class="form-horizontal form-bordered" role="form">
-            <div class="form-group">
-
-                <label for="Account" class="col-sm-3 control-label no-padding-right">关联用户：</label>
-                <div class="col-sm-6">
-                    <select class="form-control" id="Account"></select>
-                </div>
-            </div>
-        </form>
     </div>
 }
 
